--- a/index.html
+++ b/index.html
@@ -2,46 +2,44 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LuzCámaraCrítica</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&display=swap"
-        rel="stylesheet" />
+        rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    <link rel="apple-touch-icon" sizes="57x57" href="/img/ico/apple-icon-57x57.png" />
-    <link rel="apple-touch-icon" sizes="60x60" href="/img/ico/apple-icon-60x60.png" />
-    <link rel="apple-touch-icon" sizes="72x72" href="/img/ico/apple-icon-72x72.png" />
-    <link rel="apple-touch-icon" sizes="76x76" href="/img/ico/apple-icon-76x76.png" />
-    <link rel="apple-touch-icon" sizes="114x114" href="/img/ico/apple-icon-114x114.png" />
-    <link rel="apple-touch-icon" sizes="120x120" href="/img/ico/apple-icon-120x120.png" />
-    <link rel="apple-touch-icon" sizes="144x144" href="/img/ico/apple-icon-144x144.png" />
-    <link rel="apple-touch-icon" sizes="152x152" href="/img/ico/apple-icon-152x152.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/img/ico/apple-icon-180x180.png" />
-    <link rel="icon" type="image/png" sizes="192x192" href="/img/ico/android-icon-192x192.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/img/ico/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="96x96" href="/img/ico/favicon-96x96.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/img/ico/favicon-16x16.png" />
-    <link rel="manifest" href="/img/ico/manifest.json" />
-    <meta name="msapplication-TileColor" content="#ffffff" />
-    <meta name="msapplication-TileImage" content="/img/ico/ms-icon-144x144.png" />
-    <meta name="theme-color" content="#ffffff" />
-
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="apple-touch-icon" sizes="57x57" href="img/ico/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="img/ico/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="img/ico/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="img/ico/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="img/ico/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="img/ico/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="img/ico/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="img/ico/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/ico/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="img/ico/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/ico/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="img/ico/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/ico/favicon-16x16.png">
+    <link rel="manifest" href="/img/ico/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/img/ico/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="body-content">
     <header class="header">
         <div class="brand">
-            <a href="#"><img src="/img/logo2.png" alt="" class="brand-logo" />
-                <div class="brand-name">
-                    <h2><span id="luz">Luz</span><span id="camara">Cámara</span><span id="critica">Crítica</span>
-            </a></h2>
-        </div>
+            <a href="#"><img src="img/logo2.png" alt="" class="brand-logo"></a>
+            <div class="brand-name">
+                <h2><span id="luz">Luz</span><span id="camara">Cámara</span><span id="critica">Crítica</span></h2>
+            </div>
         </div>
         <nav class="menu">
             <ul>
@@ -55,16 +53,16 @@
     </header>
 
     <main>
-        <section>
+        <div>
             <div class="banner">
-                <img src="img/banners/22222222.png" alt="" />
+                <img src="img/banners/22222222.png" alt="">
             </div>
-        </section>
+        </div>
         <section class="peliculas">
             <h3>Películas destacadas</h3>
             <div class="grid pelis">
                 <div class="card">
-                    <a href="#"><img src="img/dune2.jpg" class="card-img-top" alt="..." />
+                    <a href="#"><img src="img/dune2.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <p class="card-text">DUNE Part 2</p>
                         </div>
@@ -84,7 +82,7 @@
                 </div>
                 <div class="card">
                     <a href="">
-                        <img src="img/godzillaykong.jpg" class="card-img-top" alt="..." />
+                        <img src="img/godzillaykong.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <p class="card-text">GODZILLA y KONG: Un nuevo impero</p>
                         </div>
@@ -109,7 +107,7 @@
                 </div>
                 <div class="card">
                     <a href="#">
-                        <img src="img/ferrari.jpg" class="card-img-top" alt="..." />
+                        <img src="img/ferrari.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <p class="card-text">FERRARI</p>
                         </div>
@@ -129,7 +127,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <a href="#"><img src="img/rescateImposible.jpg" class="card-img-top" alt="..." />
+                    <a href="#"><img src="img/rescateImposible.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <p class="card-text">Rescate Imposible (2024)</p>
                         </div>
@@ -154,7 +152,7 @@
                 </div>
                 <div class="card">
                     <a href="#">
-                        <img src="img/hungergames.jpg" class="card-img-top" alt="..." />
+                        <img src="img/hungergames.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <p class="card-text">
                                 LOS JUEGOS DEL HAMBRE: Balada de pájaros cantores...
@@ -183,7 +181,7 @@
                 </div>
                 <div class="card">
                     <a href="#">
-                        <img src="img/ghostbusters.jpg" class="card-img-top" alt="..." />
+                        <img src="img/ghostbusters.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <p class="card-text">
                                 GHOSTBUSTERS: Apocalipsis fantasma
@@ -208,7 +206,7 @@
                 </div>
                 <div class="card">
                     <a href="#">
-                        <img src="img/laultimaprofe.jpg" class="card-img-top" alt="..." />
+                        <img src="img/laultimaprofe.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <p class="card-text">LA PRIMERA PROFESÍA</p>
                         </div>
@@ -225,7 +223,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <a href="#"><img src="img/secretos.jpg" class="card-img-top" alt="..." />
+                    <a href="#"><img src="img/secretos.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <p class="card-text">Secretos de un escándalo</p>
                         </div>
@@ -242,7 +240,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <a href="#"><img src="img/contacto.jpg" class="card-img-top" alt="..." />
+                    <a href="#"><img src="img/contacto.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <p class="card-text">Baghead: Contacto con la muerte</p>
                         </div>
@@ -266,7 +264,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <a href="#"><img src="img/aquaman.jpeg" class="card-img-top" alt="..." />
+                    <a href="#"><img src="img/aquaman.jpeg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <p class="card-text">AQUAMAN 2</p>
                         </div>
@@ -290,7 +288,7 @@
                 </div>
                 <div class="card">
                     <a href="">
-                        <img src="img/madameweb.jpg" class="card-img-top" alt="..." />
+                        <img src="img/madameweb.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <p class="card-text">MADAME WEB</p>
                         </div>
@@ -307,7 +305,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <a href="#"><img src="img/Despuesdelamuerte.jpg" class="card-img-top" alt="..." />
+                    <a href="#"><img src="img/Despuesdelamuerte.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <p class="card-text">Después de la muerte</p>
                         </div>
@@ -331,16 +329,16 @@
                 </div>
             </div>
         </section>
-        <section>
+        <div>
             <div class="banner1">
-                <img src="./img/banners/333333.png" alt="" />
+                <img src="./img/banners/333333.png" alt="">
             </div>
-        </section>
+        </div>
         <section class="series">
             <h3>Series destacadas</h3>
             <div class="grid serie">
                 <div class="card">
-                    <a href="#"><img src="img/dune2.jpg" class="card-img-top" alt="..." />
+                    <a href="#"><img src="img/dune2.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <p class="card-text">DUNE Part 2</p>
                         </div>
@@ -348,7 +346,7 @@
                 </div>
                 <div class="card">
                     <a href="">
-                        <img src="img/godzillaykong.jpg" class="card-img-top" alt="..." />
+                        <img src="img/godzillaykong.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <p class="card-text">GODZILLA y KONG: Un nuevo impero</p>
                         </div>
@@ -356,14 +354,14 @@
                 </div>
                 <div class="card">
                     <a href="#">
-                        <img src="img/ferrari.jpg" class="card-img-top" alt="..." />
+                        <img src="img/ferrari.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <p class="card-text">FERRARI</p>
                         </div>
                     </a>
                 </div>
                 <div class="card">
-                    <a href="#"><img src="img/dune2.jpg" class="card-img-top" alt="..." />
+                    <a href="#"><img src="img/dune2.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <p class="card-text">DUNE Part 2</p>
                         </div>
@@ -371,7 +369,7 @@
                 </div>
                 <div class="card">
                     <a href="#">
-                        <img src="img/hungergames.jpg" class="card-img-top" alt="..." />
+                        <img src="img/hungergames.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <p class="card-text">
                                 LOS JUEGOS DEL HAMBRE: Balada de pájaros cantores y
@@ -382,7 +380,7 @@
                 </div>
                 <div class="card">
                     <a href="#">
-                        <img src="img/ghostbusters.jpg" class="card-img-top" alt="..." />
+                        <img src="img/ghostbusters.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <p class="card-text">
                                 GHOSTBUSTERS: Apocalipsis fantasma
@@ -392,28 +390,28 @@
                 </div>
                 <div class="card">
                     <a href="#">
-                        <img src="img/laultimaprofe.jpg" class="card-img-top" alt="..." />
+                        <img src="img/laultimaprofe.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <p class="card-text">LA PRIMERA PROFESÍA</p>
                         </div>
                     </a>
                 </div>
                 <div class="card">
-                    <a href="#"><img src="img/dune2.jpg" class="card-img-top" alt="..." />
+                    <a href="#"><img src="img/dune2.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <p class="card-text">DUNE Part 2</p>
                         </div>
                     </a>
                 </div>
                 <div class="card">
-                    <a href="#"><img src="img/dune2.jpg" class="card-img-top" alt="..." />
+                    <a href="#"><img src="img/dune2.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <p class="card-text">DUNE Part 2</p>
                         </div>
                     </a>
                 </div>
                 <div class="card">
-                    <a href="#"><img src="img/aquaman.jpeg" class="card-img-top" alt="..." />
+                    <a href="#"><img src="img/aquaman.jpeg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <p class="card-text">AQUAMAN 2</p>
                         </div>
@@ -421,14 +419,14 @@
                 </div>
                 <div class="card">
                     <a href="">
-                        <img src="img/madameweb.jpg" class="card-img-top" alt="..." />
+                        <img src="img/madameweb.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <p class="card-text">MADAME WEB</p>
                         </div>
                     </a>
                 </div>
                 <div class="card">
-                    <a href="#"><img src="img/dune2.jpg" class="card-img-top" alt="..." />
+                    <a href="#"><img src="img/dune2.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <p class="card-text">DUNE Part 2</p>
                         </div>
