--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="brand">
             <a href="#"><img src="img/logo2.png" alt="" class="brand-logo"></a>
             <div class="brand-name">
-                <h2><span id="luz">Luz</span><span id="camara">Cámara</span><span id="critica">Crítica</span></h2>
+                <a href="#"><h2><span id="luz">Luz</span><span id="camara">Cámara</span><span id="critica">Crítica</span></h2></a>
             </div>
         </div>
         <nav class="menu">
