--- a/pages/acercaDe.html
+++ b/pages/acercaDe.html
@@ -8,11 +8,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&display=swap"
-        rel="stylesheet">
-
+    href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&display=swap"
+    rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <link rel="apple-touch-icon" sizes="57x57" href="/img/ico/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/img/ico/apple-icon-60x60.png">
@@ -31,7 +30,6 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/img/ico/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
-
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
@@ -39,11 +37,10 @@
 <body class="body-content about">
     <header class="header">
         <div class="brand">
-            <a href="../index.html"><img src="/img/logo2.png" alt="" class="brand-logo" />
-                <div class="brand-name">
-                    <h2><span id="luz">Luz</span><span id="camara">Cámara</span><span id="critica">Crítica</span></h2>
-            </a>
-        </div>
+            <a href="../index.html"><img src="../img/logo2.png" alt="" class="brand-logo"></a>
+            <div class="brand-name">
+                <a href="../index.html"><h2><span id="luz">Luz</span><span id="camara">Cámara</span><span id="critica">Crítica</span></h2></a>
+            </div>
         </div>
         <nav class="menu">
             <ul>
