--- a/pages/registro.html
+++ b/pages/registro.html
@@ -2,47 +2,45 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LuzCámaraCrítica</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&Jost:ital,wght@0,100..900;1,100..900&display=swap"
-        rel="stylesheet" />
+        rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="shortcut icon" href="favicon.ico" type="image/ico">
 
-    <link rel="apple-touch-icon" sizes="57x57" href="/img/ico/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/img/ico/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/img/ico/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/img/ico/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/img/ico/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/img/ico/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/img/ico/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/img/ico/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/img/ico/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="/img/ico/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/img/ico/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/img/ico/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/img/ico/favicon-16x16.png">
-    <link rel="manifest" href="/img/ico/manifest.json">
+    <link rel="apple-touch-icon" sizes="57x57" href="../img/ico/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="../img/ico/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="../img/ico/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="../img/ico/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="../img/ico/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="../img/ico/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="../img/ico/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="../img/ico/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../img/ico/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="../img/ico/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../img/ico/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="../img/ico/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../img/ico/favicon-16x16.png">
+    <link rel="manifest" href="../img/ico/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="/img/ico/ms-icon-144x144.png">
+    <meta name="msapplication-TileImage" content="../img/ico/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
-
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body class="body-content-registro">
     <header class="header">
         <div class="brand">
-            <a href="../index.html"><img src="/img/logo2.png" alt="" class="brand-logo" />
-                <div class="brand-name">
-                    <h2><span id="luz">Luz</span><span id="camara">Cámara</span><span id="critica">Crítica</span>
-            </a></h2>
-        </div>
+            <a href="../index.html"><img src="../img/logo2.png" alt="" class="brand-logo"></a>
+            <div class="brand-name">
+                <a href="../index.html"><h2><span id="luz">Luz</span><span id="camara">Cámara</span><span id="critica">Crítica</span></h2></a>
+            </div>
         </div>
         <nav class="menu">
             <ul>
@@ -54,12 +52,10 @@
             </ul>
         </nav>
     </header>
-    </div>
-
     <main class="main-content-registro">
 
         <div class="formulario">
-            <form id="registro" action="" method="post">
+            <form id="registro" action="#" method="post">
                 <h2>Formulario de Registro</h2>
                 <table>
                     <tr>
