--- a/pages/series.html
+++ b/pages/series.html
@@ -11,37 +11,35 @@
     href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&display=swap"
     rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    <link rel="apple-touch-icon" sizes="57x57" href="/img/ico/apple-icon-57x57.png" />
-    <link rel="apple-touch-icon" sizes="60x60" href="/img/ico/apple-icon-60x60.png" />
-    <link rel="apple-touch-icon" sizes="72x72" href="/img/ico/apple-icon-72x72.png" />
-    <link rel="apple-touch-icon" sizes="76x76" href="/img/ico/apple-icon-76x76.png" />
-    <link rel="apple-touch-icon" sizes="114x114" href="/img/ico/apple-icon-114x114.png" />
-    <link rel="apple-touch-icon" sizes="120x120" href="/img/ico/apple-icon-120x120.png" />
-    <link rel="apple-touch-icon" sizes="144x144" href="/img/ico/apple-icon-144x144.png" />
-    <link rel="apple-touch-icon" sizes="152x152" href="/img/ico/apple-icon-152x152.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/img/ico/apple-icon-180x180.png" />
-    <link rel="icon" type="image/png" sizes="192x192" href="/img/ico/android-icon-192x192.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/img/ico/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="96x96" href="/img/ico/favicon-96x96.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/img/ico/favicon-16x16.png" />
-    <link rel="manifest" href="/img/ico/manifest.json" />
-    <meta name="msapplication-TileColor" content="#ffffff" />
-    <meta name="msapplication-TileImage" content="/img/ico/ms-icon-144x144.png" />
-    <meta name="theme-color" content="#ffffff" />
-    
+    <link rel="apple-touch-icon" sizes="57x57" href="/img/ico/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/img/ico/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/img/ico/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/img/ico/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/img/ico/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/img/ico/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/img/ico/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/img/ico/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/ico/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/img/ico/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/img/ico/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/img/ico/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/img/ico/favicon-16x16.png">
+    <link rel="manifest" href="/img/ico/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/img/ico/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body class="body-content">
     <header class="header">
         <div class="brand">
-            <a href="../index.html"><img src="/img/logo2.png" alt="" class="brand-logo" />
-                <div class="brand-name">
-                    <h2><span id="luz">Luz</span><span id="camara">Cámara</span><span id="critica">Crítica</span>
-            </a></h2>
-                </div>
+            <a href="../index.html"><img src="../img/logo2.png" alt="" class="brand-logo"></a>
+            <div class="brand-name">
+                <a href="../index.html"><h2><span id="luz">Luz</span><span id="camara">Cámara</span><span id="critica">Crítica</span></h2></a>
+            </div>
         </div>
         <nav class="menu">
             <ul>
@@ -61,7 +59,7 @@
         </div>
         <div class="grid pelis">
             <div class="card" >
-                <a href="#"><img src="../img/series/breakingbad.jpg" class="card-img-top" alt="..." />
+                <a href="#"><img src="../img/series/breakingbad.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Breaking Bad</p>
                     </div>
@@ -81,7 +79,7 @@
             </div>
             <div class="card" >
                 <a href="">
-                    <img src="../img/series/lacasadepapel.jpg" class="card-img-top" alt="..." />
+                    <img src="../img/series/lacasadepapel.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">La casa de papel</p>
                     </div>
@@ -106,7 +104,7 @@
             </div>
             <div class="card">
                 <a href="#">
-                    <img src="../img/series/peakyblinders.jpg" class="card-img-top" alt="..." />
+                    <img src="../img/series/peakyblinders.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Peaky Blinders</p>
                     </div>
@@ -126,7 +124,7 @@
                 </div>
             </div>
             <div class="card">
-                <a href="#"><img src="../img/series/strangerthings.jpg" class="card-img-top" alt="..." />
+                <a href="#"><img src="../img/series/strangerthings.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Stranger Things</p>
                     </div>
@@ -150,7 +148,7 @@
                 </div>
             </div>
             <div class="card">
-                <a href="#"><img src="../img/series/blackmirror.jpg" class="card-img-top" alt="..." />
+                <a href="#"><img src="../img/series/blackmirror.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Black Mirror</p>
                     </div>
@@ -170,7 +168,7 @@
             </div>
             <div class="card">
                 <a href="">
-                    <img src="../img/series/houseofcards.jpg" class="card-img-top" alt="..." />
+                    <img src="../img/series/houseofcards.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">House of Cards</p>
                     </div>
@@ -195,7 +193,7 @@
             </div>
             <div class="card">
                 <a href="#">
-                    <img src="../img/series/vikings.jpg" class="card-img-top" alt="..." />
+                    <img src="../img/series/vikings.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Vikings</p>
                     </div>
@@ -215,7 +213,7 @@
                 </div>
             </div>
             <div class="card">
-                <a href="#"><img src="../img/series/LasChicasDelCable.jpg" class="card-img-top" alt="..." />
+                <a href="#"><img src="../img/series/LasChicasDelCable.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">las chicas del cable</p>
                     </div>
@@ -239,7 +237,7 @@
                 </div>
             </div>
             <div class="card">
-                <a href="#"><img src="../img/series/friends.jpg" class="card-img-top" alt="..." />
+                <a href="#"><img src="../img/series/friends.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Friends</p>
                     </div>
@@ -259,7 +257,7 @@
             </div>
             <div class="card">
                 <a href="">
-                    <img src="../img/series/dexter.jpg" class="card-img-top" alt="..." />
+                    <img src="../img/series/dexter.jpg" class="card-img-top" alt="..." >
                     <div class="card-body">
                         <p class="card-text">Dexter</p>
                     </div>
@@ -284,7 +282,7 @@
             </div>
             <div class="card">
                 <a href="#">
-                    <img src="../img/series/gameofthrones.jpg" class="card-img-top" alt="..." />
+                    <img src="../img/series/gameofthrones.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Game of Thrones</p>
                     </div>
@@ -304,7 +302,7 @@
                 </div>
             </div>
             <div class="card">
-                <a href="#"><img src="../img/series/thebigbangtheory.jpg" class="card-img-top" alt="..." />
+                <a href="#"><img src="../img/series/thebigbangtheory.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">The big bang theory</p>
                     </div>
@@ -328,7 +326,7 @@
                 </div>
             </div>
             <div class="card">
-                <a href="#"><img src="../img/series/eljuegodelcalamar.jpg" class="card-img-top" alt="..." />
+                <a href="#"><img src="../img/series/eljuegodelcalamar.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">El juego del Calamar</p>
                     </div>
@@ -348,7 +346,7 @@
             </div>
             <div class="card">
                 <a href="">
-                    <img src="../img/series/sexandthecity.jpg" class="card-img-top" alt="..." />
+                    <img src="../img/series/sexandthecity.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Sex and the city</p>
                     </div>
@@ -373,7 +371,7 @@
             </div>
             <div class="card">
                 <a href="#">
-                    <img src="../img/series/thewalkingdead.jpg" class="card-img-top" alt="..." />
+                    <img src="../img/series/thewalkingdead.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">The Walking Dead</p>
                     </div>
@@ -393,7 +391,7 @@
                 </div>
             </div>
             <div class="card">
-                <a href="#"><img src="../img/series/Dark.jpg" class="card-img-top" alt="..." />
+                <a href="#"><img src="../img/series/Dark.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Dark</p>
                     </div>
@@ -417,7 +415,7 @@
                 </div>
             </div>
             <div class="card">
-                <a href="#"><img src="../img/series/Elcuentodelacriada.jpg" class="card-img-top" alt="..." />
+                <a href="#"><img src="../img/series/Elcuentodelacriada.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">El Cuento de la Criada</p>
                     </div>
@@ -437,7 +435,7 @@
             </div>
             <div class="card">
                 <a href="">
-                    <img src="../img/series/Mindhunter.jpg" class="card-img-top" alt="..." />
+                    <img src="../img/series/Mindhunter.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Mindhunter</p>
                     </div>
@@ -462,7 +460,7 @@
             </div>
             <div class="card">
                 <a href="#">
-                    <img src="../img/series/padredefamilia.jpg" class="card-img-top" alt="..." />
+                    <img src="../img/series/padredefamilia.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Padre de familia</p>
                     </div>
@@ -482,7 +480,7 @@
                 </div>
             </div>
             <div class="card">
-                <a href="#"><img src="../img/series/futurama.jpg" class="card-img-top" alt="..." />
+                <a href="#"><img src="../img/series/futurama.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Futurama</p>
                     </div>
