--- a/pages/registro.html
+++ b/pages/registro.html
@@ -10,10 +10,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&Jost:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="shortcut icon" href="favicon.ico" type="image/ico">
 
+    <link rel="shortcut icon" href="favicon.ico" type="image/ico">
     <link rel="apple-touch-icon" sizes="57x57" href="../img/ico/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="../img/ico/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="../img/ico/apple-icon-72x72.png">
@@ -128,7 +126,7 @@
 
                 <label for="terminos"><input type="checkbox" id="terminos" name="terminos" required> He leído, entiendo
                     y acepto la
-                    POLÍTICA DE PRIVACIDAD para ser miembro. <br><a href="#">Terminos y Condiciones</a></label> <br>
+                    POLÍTICA DE PRIVACIDAD para ser miembro. <a href="#">Terminos y Condiciones</a></label> <br>
                 <div class="div-boton-registro">
                     <button class="boton_registro" type="submit">Registrar</button>
                 </div>
@@ -160,19 +158,8 @@
         </div>
     </footer>
 
-
-
     <script src="../js/index.js"></script>
     <script src="https://kit.fontawesome.com/28b1a5ddfd.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous">
-    </script>
-</body>
 
+</body>
 </html>
